[metadata]
name = Modular-Math-lzweigle
version = 0.0.1
author = Landon Zweigle
author_email = lzweigle@rams.colostate.edu
description = A set of tools for computing common modular arithmatic algorithms for cryptography.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/landonzweigle/Modulo-Math-Tools
project_urls =
    Bug Tracker = https://github.com/landonzweigle/Modulo-Math-Tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src